@@ -8,6 +8,7 @@ Current development version (0.6.2-SNAPSHOT)
 - Added parsing of Mach-O compressed symbols tries (LC_DYLD_INFO command) to dyncall (issue #311)
 - Added Pointer.withoutValidityInformation() (yields faster, unsafe pointer)
 - Added BridJ.subclassWithSynchronizedNativeMethods(Class) to create a subclass where all native methods are overridden
+- Added Pointer.getIntAtIndex(long) / .setIntAtIndex(long, int) (and with all primitive variants)
 - Removed ios-package (binaries for iOS/arm) 
 
 BridJ 0.6.1 (20120415, commit 6bc061dfce06b941086a29f696195e82fbaffbdc) 
